--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         var global = window;
       }
     </script>
+    <script> var global = global || window; var Buffer = Buffer || []; var process = process || { env: { DEBUG: undefined }, version: [] }; </script>
   </head>
   <body class="min-h-screen">
     <div id="root"></div>
