--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/github-pages-visual/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <script>
@@ -11,8 +11,8 @@
       }
     </script>
     <script> var global = global || window; var Buffer = Buffer || []; var process = process || { env: { DEBUG: undefined }, version: [] }; </script>
-    <script type="module" crossorigin src="/assets/index.6ffa3ba1.js"></script>
-    <link rel="stylesheet" href="/assets/index.f4c2a36e.css">
+    <script type="module" crossorigin src="/github-pages-visual/assets/index.6ffa3ba1.js"></script>
+    <link rel="stylesheet" href="/github-pages-visual/assets/index.f4c2a36e.css">
   </head>
   <body class="min-h-screen">
     <div id="root"></div>
