--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/github-pages-visual/assets/favicon.17e50649.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script>
-      if (global === undefined) {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><link rel="icon" type="image/svg+xml" href="/src/favicon.svg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Vite App</title><script>if (global === undefined) {
         var global = window;
-      }
-    </script>
-    <script> var global = global || window; var Buffer = Buffer || []; var process = process || { env: { DEBUG: undefined }, version: [] }; </script>
-    <script type="module" crossorigin src="/github-pages-visual/assets/index.6ffa3ba1.js"></script>
-    <link rel="stylesheet" href="/github-pages-visual/assets/index.f4c2a36e.css">
-  </head>
-  <body class="min-h-screen">
-    <div id="root"></div>
-    
-  </body>
-</html>
+      }</script><script>var global = global || window; var Buffer = Buffer || []; var process = process || { env: { DEBUG: undefined }, version: [] };</script><script defer="defer" src="235.6ec95031ffb10cf80685.js"></script><script defer="defer" src="main.fa8c02d5119d5a421405.js"></script><link href="main.css" rel="stylesheet"></head><body class="min-h-screen"><div id="root"></div><script type="module" src="/src/main.jsx"></script></body></html>
